# Eigen-Practice

./: .gitignore  README.md
myslam/ch2/: CMakeLists.txt  helloSLAM.cpp
myslam/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp  eigenProblemSet1_1.cpp  eigenProblemSet1_2.cpp  eigenProblemSet1_3.cpp  eigenTutorial.cpp
myslam/ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
myslam/ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
myslam/ch4/useSophus/: useSophus.cpp
myslam/ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
myslam/ch5/joinMap/: CMakeLists.txt  joinMap.cpp  pose.txt
myslam/ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
